收藏功能，未完善 版本未发布
修改了一些图标，完成了页面跳转，完成了获取用户信息存入数据库，删除了app.js中的部分冗余代码

--- a/app.json
+++ b/app.json
@@ -5,11 +5,10 @@
     "pages/myadmin/about/abouts",
     "pages/myadmin/faceback/facebacks",
     "pages/navigate/navigates",
-    "pages/myadmin/success/seccess"
-   
+    "pages/myadmin/success/seccess",
+    "pages/myadmin/collection/collections"
   ],
  "window":{
-
     "navigationBarTextStyle": "white",
     "navigationBarTitleText": "遇见书画",
     "navigationBarBackgroundColor": "#2A8AE0",
