--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/myadmin/myadmins",
-    "pages/myadmin/about/abouts",
-    "pages/myadmin/faceback/facebacks",
-    "pages/navigate/navigates",
-    "pages/myadmin/success/seccess",
-    "pages/myadmin/collection/collections",
-    "pages/share/shares"
+    "pages/personal/personal",
+    "pages/about/about",
+    "pages/feedback/feedback",
+    "pages/navigate/navigate",
+    "pages/success/seccess",
+    "pages/collection/collection",
+    "pages/share/share"
   ],
  "window":{
     "navigationBarTextStyle": "white",
@@ -25,12 +25,13 @@
       "text": "首页",
       "iconPath":"images/home_unchecked.png",
       "selectedIconPath":"images/home_selected.png"
-    },{
-      "pagePath": "pages/myadmin/myadmins",
-      "text": "我的",
-      "iconPath":"images/personal_unchecked.png",
-      "selectedIconPath":"images/personal_selected.png"
-    }
+      },
+      {
+        "pagePath": "pages/personal/personal",
+        "text": "我的",
+        "iconPath":"images/personal_unchecked.png",
+        "selectedIconPath":"images/personal_selected.png"
+      }
     ]
   }
 }
