--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/personal/personal",
     "pages/about/about",
@@ -7,30 +7,31 @@
     "pages/navigate/navigate",
     "pages/success/seccess",
     "pages/collection/collection",
-    "pages/share/share"
+    "pages/share/share",
+    "pages/advertisement/advertisement"
   ],
- "window":{
+  "window": {
     "navigationBarTextStyle": "white",
     "navigationBarTitleText": "遇见书画",
     "navigationBarBackgroundColor": "#2A8AE0",
     "backgroundTextStyle": "light"
   },
-    "tabBar": {
-      "borderStyle": "white",
-      "backgroundColor":"#FFFFFF",
-      "selectedColor":"#2A8AE0",
+  "tabBar": {
+    "borderStyle": "white",
+    "backgroundColor": "#FFFFFF",
+    "selectedColor": "#2A8AE0",
     "list": [
       {
-      "pagePath": "pages/index/index",
-      "text": "首页",
-      "iconPath":"images/home_unchecked.png",
-      "selectedIconPath":"images/home_selected.png"
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "images/home_unchecked.png",
+        "selectedIconPath": "images/home_selected.png"
       },
       {
         "pagePath": "pages/personal/personal",
         "text": "我的",
-        "iconPath":"images/personal_unchecked.png",
-        "selectedIconPath":"images/personal_selected.png"
+        "iconPath": "images/personal_unchecked.png",
+        "selectedIconPath": "images/personal_selected.png"
       }
     ]
   }
